I added a screenshot to the README.md as well as content.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Generator</title>
-
-    <style>
-
-
-    </style>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,17 +18,13 @@
                 <div class="col-md-3"></div>
                 <div class="card w-50 p-0">
                     <div class="card-header card-header-red bg-danger ">
-
                     </div>
                     <div class="card-body border border-danger">
                         <h2 class=" card-title text-center">Click the button below to generate a secure password </h2>
                         <br>
                         <p class="card-text">
-
-
                         <div class="form-group">
                             <label for="formGroupExampleInput"></label>
-
                         </div>
                         <div class="form-group">
                             <label for="formGroupExampleInput2"></label>
@@ -49,19 +39,14 @@
                                     readonly></textarea>
                             </div>
                             <br>
-
+                            <p class="text-center">To see the code, click the icon in the footer. Enjoy!</p>
                             <br>
-
                         </div>
                     </div>
-
                     <div class=" card card-footer text-muted bg-danger">
                     </div>
-
-
                 </div>
             </div>
-
         </container>
         <container>
             <div>
@@ -70,7 +55,6 @@
                 </nav>
             </div>
         </container>
-
         <script type="text/javascript" src="script.js"></script>
 </body>
 
