--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
 </head>
 
 <body>
-    <div style="height: 150px;">
+    <div>
         <h1 class="header"><b>PASSWORD GENERATOR</b></h1>
         <container class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="card mx-auto w-50 p-0">
+                    <div class="card mx-auto w-50 p-0 responsive">
                         <div class="card-header card-header-red bg-danger ">
                         </div>
                         <div class="card-body border border-danger">
                             <h4 class=" card-title text-center">Click the button below to generate a secure password
                             </h4>
-                            <br>
                             <p class="card-text">
                             <div class="form-group">
                                 <label for="formGroupExampleInput"></label>
@@ -34,7 +33,6 @@
                                     <a class="btn btn-danger" id="generate"><b>GENERATE</b></a>
                                     <br>
                                 </div>
-                                <br>
                                 <br>
                                 <div class="text-center w-100%">
                                     <textarea rows="4" cols="50" name="password" id="password"
@@ -52,7 +50,7 @@
             </div>
         </container>
         <container>
-            <div class="footer-div">
+            <div>
                 <nav class="footer navbar-fixed-bottom container-fluid">
                     <p><a class="" href="https://github.com/coreyspratlan/passwordGenerator" target="blank">💻</a></p>
                 </nav>
